# learn-opengl

./: CMakeLists.txt
src/: main.cpp
src/3DModel/Mesh/: Mesh.cpp  Mesh.h
src/3DModel/Model/: Model.cpp  Model.h
src/Camera/: Camera.cpp  Camera.h
src/Shader/: Shader.cpp  Shader.h
src/TextureLoader/: TextureLoader.cpp  TextureLoader.h
src/models/Cube/: Cube.h
src/models/MinecraftCube/: MinecraftCube.h
src/resources/objects/backpack/: backpack.mtl
src/resources/objects/naruto/: naruto.mtl
src/resources/objects/sasuke/: sasuke.mtl
src/shaders/: fragmentShaderSource.fs  vertexShaderSource.vs
src/shaders/backpackShaders/: index.fs  index.vs
src/shaders/light/: lightingFragmentShaderSource.fs  lightingVertexShaderSource.vs
src/shaders/narutoCharacterShaders/: index.fs  index.vs
src/shaders/singleColor/: index.vs
